@@ -1,0 +1,6 @@
+[cat1]
+
+mykey = 500
+}This is comment out.
+}mykey = 1000
+;This too.
